--- a/post_js_sample/index.html
+++ b/post_js_sample/index.html
@@ -1,33 +1,19 @@
 <!DOCTYPE html>
 <html lang="ja">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>自作APIテスト</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <title>メッセージ投稿サイト</title>
   </head>
+
   <body>
-    <h1>自作APIテスト</h1>
-    <!-- 新規投稿 -->
-    <p>
-      <div>
-        <label for="post-title">タイトル</label>
-      </div>
-      <div>
-        <input type="text" id="post-title" size="70" />
-      </div>
-    </p>
-    <p>
-      <div>
-        <label for="post-content">内容</label>
-      </div>
-      <div>
-        <textarea cols="70" rows="5" id="post-content"></textarea>
-      </div>
-    </p>
-    <button id="post-button">送信</button>
-    <!-- 投稿リスト -->
-    <section id="post-list"></section>
+    <!-- HTMLは以下に記載 -->
+    <input type="text" id="message-field" />
+    <input type="button" value="投稿" id="message-button" />
+    <hr />
+    <div id="message-list"></div>
+
+    <!-- jsファイルの読み込み -->
     <script src="script.js"></script>
   </body>
 </html>
